chore: fix @author and deprecated Path.of()